--- a/src/main/resources/static/css/writeHospital.css
+++ b/src/main/resources/static/css/writeHospital.css
@@ -19,9 +19,9 @@
     position: relative;
 }
 
-.board-detail-img {
-    max-width: 100%;
-    max-height: 100%;
+.hospital-detail-img {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     display: block;
 }
